erp5_document_scanner: try to bypass cropper resize issue
but doesn't seems good :/

--- a/bt5/erp5_document_scanner/PathTemplateItem/web_page_module/scanner_gadget_document_scanner_css.css
+++ b/bt5/erp5_document_scanner/PathTemplateItem/web_page_module/scanner_gadget_document_scanner_css.css
@@ -100,7 +100,13 @@ div[data-gadget-url$="gadget_document_scanner.html"] .new-btn {
 }
 div[data-gadget-url$="gadget_document_scanner.html"] .img-container {
   /* Never limit the container height here */
+  position: relative;
+  width: 100%;
+  max-height: 500px;
+}
+div[data-gadget-url$="gadget_document_scanner.html"] .img-container img {
   max-width: 100%;
+  width: 100%;
 }
 div[data-gadget-url$="gadget_document_scanner.html"] .btn-thumbnail:before {
   color: #000;
